Fix static asset routing for Vercel deployment
- Update vercel.json with proper routing rules for JS/CSS/image files
- Change relative paths to absolute paths in public/index.html
- Add vue.config.js for proper build configuration
- Ensure static assets are served correctly instead of returning HTML

This should resolve the 'Unexpected token <' JavaScript errors by ensuring
JS files are served as JavaScript instead of HTML content.

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="icon" href="/favicon.ico" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
-  <link href="./css/bootstrap.css" rel="stylesheet" />
-  <link href="./css/mdb.css" rel="stylesheet" />
+  <link href="/css/bootstrap.css" rel="stylesheet" />
+  <link href="/css/mdb.css" rel="stylesheet" />
   <title>ICPC2T : International Conference on Power, Control and Computing Technologies</title>
   <style>
     /* Ensure full-width layout */
@@ -82,10 +82,10 @@
   <div id="app"></div>
 
   <!-- JS Files -->
-  <script src="./js/jquery-3.4.1.min.js"></script>
-  <script src="./js/popper.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <script src="./js/mdb.min.js"></script>
+  <script src="/js/jquery-3.4.1.min.js"></script>
+  <script src="/js/popper.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/mdb.min.js"></script>
 
   <script>
     $(window).scroll(function () {
